{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 155,
  "lineage": "a8e37359-f453-d504-7d99-ada60a43ef04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084bcd5da5d2117f5",
            "domain": "vpc",
            "id": "eipalloc-084bcd5da5d2117f5",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-48-255-91.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.255.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:internet-gateway/igw-06048832f4e7878a9",
            "id": "igw-06048832f4e7878a9",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV IGW"
            },
            "tags_all": {
              "Name": "DEV IGW"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084bcd5da5d2117f5",
            "connectivity_type": "public",
            "id": "nat-0875bc998e6723ca8",
            "network_interface_id": "eni-024e368cd8a5772bd",
            "private_ip": "10.20.1.193",
            "public_ip": "13.48.255.91",
            "subnet_id": "subnet-03c5c5767ad53acb9",
            "tags": {
              "Name": "DEV NAT Gateway"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:route-table/rtb-0ff223a092a043904",
            "id": "rtb-0ff223a092a043904",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0875bc998e6723ca8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Private Route Table"
            },
            "tags_all": {
              "Name": "DEV Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:route-table/rtb-080b9547ff1a6eeb8",
            "id": "rtb-080b9547ff1a6eeb8",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06048832f4e7878a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Public Route Table"
            },
            "tags_all": {
              "Name": "DEV Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef117b39ee81a1ba",
            "route_table_id": "rtb-0ff223a092a043904",
            "subnet_id": "subnet-04625b80ab73a864f"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ed47cf4b76834cf",
            "route_table_id": "rtb-0ff223a092a043904",
            "subnet_id": "subnet-0517dbf61c0470f2d"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a833e3db4f6f04c",
            "route_table_id": "rtb-0ff223a092a043904",
            "subnet_id": "subnet-08b218d88b743e133"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00beb95e35f8d7cdc",
            "route_table_id": "rtb-080b9547ff1a6eeb8",
            "subnet_id": "subnet-03c5c5767ad53acb9"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec8573208dda346f",
            "route_table_id": "rtb-080b9547ff1a6eeb8",
            "subnet_id": "subnet-0a0764ba7c876a5ff"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede58d08ab94c85b",
            "route_table_id": "rtb-080b9547ff1a6eeb8",
            "subnet_id": "subnet-032334d72c68fee2f"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-04625b80ab73a864f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.20.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04625b80ab73a864f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PrivateSubnet0"
            },
            "tags_all": {
              "Name": "Dev_PrivateSubnet0"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-0517dbf61c0470f2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0517dbf61c0470f2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PrivateSubnet1"
            },
            "tags_all": {
              "Name": "Dev_PrivateSubnet1"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-08b218d88b743e133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.20.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b218d88b743e133",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PrivateSubnet2"
            },
            "tags_all": {
              "Name": "Dev_PrivateSubnet2"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-03c5c5767ad53acb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c5c5767ad53acb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PublicSubnet0"
            },
            "tags_all": {
              "Name": "Dev_PublicSubnet0"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-0a0764ba7c876a5ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0764ba7c876a5ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PublicSubnet1"
            },
            "tags_all": {
              "Name": "Dev_PublicSubnet1"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:subnet/subnet-032334d72c68fee2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032334d72c68fee2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev_PublicSubnet2"
            },
            "tags_all": {
              "Name": "Dev_PublicSubnet2"
            },
            "vpc_id": "vpc-0efc6a6c3ad0c81ce"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:320085357126:vpc/vpc-0efc6a6c3ad0c81ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e502227d855a81fa",
            "default_route_table_id": "rtb-0a772e180d747ec29",
            "default_security_group_id": "sg-09b44d28d52931aa6",
            "dhcp_options_id": "dopt-229f274b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efc6a6c3ad0c81ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a772e180d747ec29",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV VPC"
            },
            "tags_all": {
              "Name": "DEV VPC"
            }
          }
        }
      ]
    }
  ]
}